interpreter-janeklang/tests/bad/07_byVariableWrongType_1.janek
void skibidi(int a){
    return;
}

int main(){
    string s = "asd";
    skibidi(s);
    return 0;
}